Small fix of z-index

--- a/src/styles/Results.sass
+++ b/src/styles/Results.sass
@@ -66,6 +66,7 @@
 	flex-wrap: wrap
 	align-self: flex-start
 	margin-left: 60px
+	z-index: 999
 	&__text
 		display: block
 		width: 100%
